// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP On Demand Audio Page A11y I can see the skip to content link 1`] = `"Langsung ke konten"`;

exports[`AMP On Demand Audio Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP On Demand Audio Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP On Demand Audio Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=54&p=indonesia.bbc_indonesian_radio.w172xh267fpn19l.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Apips%3Aw172xh267fpn19l]&x2=[amp]&x3=[news-indonesia]&x4=[id]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[Dunia%2520Pagi%2520Ini%2520-%2520BBC%2520News%2520Indonesia]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP On Demand Audio Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Indonesia, Indonesia - Radio",
    "title": "Dunia Pagi Ini - BBC News Indonesia",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP On Demand Audio Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Indonesia",
  "url": "/indonesia",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 2`] = `
{
  "text": "Alasan Anda dapat mempercayai BBC News",
  "url": "https://www.bbc.com/indonesia/institutional-49283175",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 3`] = `
{
  "text": "Peraturan Penggunaan",
  "url": "https://www.bbc.com/indonesia/institutional-37818421",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 4`] = `
{
  "text": "Mengenai BBC",
  "url": "https://www.bbc.com/indonesia/institutional-37818424",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 5`] = `
{
  "text": "Kebijakan tentang Privasi",
  "url": "https://www.bbc.com/indonesia/institutional-37818425",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 7`] = `
{
  "text": "Hubungi BBC",
  "url": "https://www.bbc.co.uk/indonesia/send/u50853401",
}
`;

exports[`AMP On Demand Audio Page Footer Anchors should match text and url 8`] = `
{
  "text": "Baca tentang peraturan baru terkait link eksternal.",
  "url": "https://www.bbc.com/indonesia/institutional/2011/02/000001_links",
}
`;

exports[`AMP On Demand Audio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/indonesia"`;

exports[`AMP On Demand Audio Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. BBC tidak bertanggung jawab atas konten dari situs eksternal. Baca tentang peraturan baru terkait link eksternal."`;

exports[`AMP On Demand Audio Page Header I can see the branding 1`] = `"BBC News, Indonesia"`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 1`] = `
{
  "text": "Berita",
  "url": "/indonesia",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 2`] = `
{
  "text": "Indonesia",
  "url": "/indonesia/topics/cjgn7k8yx4gt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 3`] = `
{
  "text": "Dunia",
  "url": "/indonesia/topics/cyz8evpl224t",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 4`] = `
{
  "text": "Viral",
  "url": "/indonesia/topics/cn5w7g2nq6dt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 5`] = `
{
  "text": "Liputan Mendalam",
  "url": "/indonesia/topics/cw9qgeqd18zt",
}
`;

exports[`AMP On Demand Audio Page Header Navigation link should match text and url 6`] = `
{
  "text": "Majalah",
  "url": "/indonesia/topics/cpxrqmrkeg8t",
}
`;

exports[`AMP On Demand Audio Page I can see the brand title 1`] = `"Dunia Pagi Ini"`;

exports[`AMP On Demand Audio Page I can see the episode summary 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Audio Page I can see the episode title 1`] = `"27 April 2020"`;

exports[`AMP On Demand Audio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p08b4828.png"`;

exports[`AMP On Demand Audio Page Main heading should match text 1`] = `"Dunia Pagi Ini, 27 April 2020"`;

exports[`AMP On Demand Audio Page Media Player a11y assistive technology can read the media player title 1`] = `"Pemutar Audio"`;

exports[`AMP On Demand Audio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/indonesia/bbc_indonesian_radio/w172xh267fpn19l/id/amp?morph_env=live"`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "Audio, Dunia Pagi Ini, 14 Desember 2020,  Durasi 15,30  Durasi 15:30",
  "url": "/indonesia/bbc_indonesian_radio/w172xnm9z732xfp",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "Audio, Dunia Pagi Ini, 14 Desember 2020,  Durasi 15,30  Durasi 15:30",
  "url": "/indonesia/bbc_indonesian_radio/w172xnm9z732spk",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "Audio, Dunia Pagi Ini, 13 Desember 2020,  Durasi 15,30  Durasi 15:30",
  "url": "/indonesia/bbc_indonesian_radio/w172xnm9lysw58f",
}
`;

exports[`AMP On Demand Audio Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "Audio, Dunia Pagi Ini, 13 Desember 2020,  Durasi 15,30  Durasi 15:30",
  "url": "/indonesia/bbc_indonesian_radio/w172xnm9lysw1j9",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-72x72.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-96x96.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-128x128.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-144x144.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-152x152.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-180x180.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-384x384.png",
}
`;

exports[`AMP On Demand Audio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-512x512.png",
}
`;

exports[`AMP On Demand Audio Page SEO Canonical link 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l"`;

exports[`AMP On Demand Audio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP On Demand Audio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP On Demand Audio Page SEO Heading level 1 1`] = `"Dunia Pagi Ini, 27 April 2020"`;

exports[`AMP On Demand Audio Page SEO Lang attribute 1`] = `"id"`;

exports[`AMP On Demand Audio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "id",
        "name": "Indonesian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l",
        "@type": "WebPage",
        "name": "Dunia Pagi Ini",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
          "width": 1024,
        },
        "name": "BBC News Indonesia",
        "publishingPrinciples": "https://www.bbc.com/indonesia/institutional-49283175",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
      "url": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l",
    },
    {
      "@type": "AudioObject",
      "description": "Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya.",
      "duration": "PT15M30S",
      "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/media/indonesia/bbc_indonesian_radio/w172xh267fpn19l/id/amp?morph_env=live",
      "name": "Dunia Pagi Ini",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p08b4828.png",
      "uploadDate": "2020-04-27T00:00:00.000Z",
    },
  ],
}
`;

exports[`AMP On Demand Audio Page SEO OG description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Audio Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b4828.png"`;

exports[`AMP On Demand Audio Page SEO OG image alt 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Audio Page SEO OG locale 1`] = `"id-ID"`;

exports[`AMP On Demand Audio Page SEO OG site name 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Audio Page SEO OG title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Audio Page SEO OG type 1`] = `"website"`;

exports[`AMP On Demand Audio Page SEO OG url 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l"`;

exports[`AMP On Demand Audio Page SEO Page title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Audio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP On Demand Audio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP On Demand Audio Page SEO Twitter creator 1`] = `"@bbcindonesia"`;

exports[`AMP On Demand Audio Page SEO Twitter description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Audio Page SEO Twitter image alt 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Audio Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b4828.png"`;

exports[`AMP On Demand Audio Page SEO Twitter site 1`] = `"@bbcindonesia"`;

exports[`AMP On Demand Audio Page SEO Twitter title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Audio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Dunia Pagi Ini, 27 April 2020"`;
